<resources>
    <!--    Content descriptions-->
    <string name="cd_action_delete">Delete record</string>
    <string name="cd_action_edit">Edit record</string>
    <string name="cd_action_share">Share record</string>
    <string name="cd_toggle_sensitive_data_visibility">Toggle sensitive data visibility</string>
    <string name="cd_add_new_record_button">Add new record button</string>
    <string name="cd_search_bar">Search records by title</string>
    <string name="cd_clear_search_bar">Clear search bar</string>
    <string name="cd_back_button">Back button</string>


    <!--    Screen title-->
    <string name="bottom_nav_records">Records</string>
    <string name="bottom_nav_backup_and_restore">Backup &amp; Restore</string>
    <string name="bottom_nav_settings">Settings</string>

    <!--    Snackbar -->

    <!--    Common-->
    <string name="common_app_playstore_download">Data stored securely by Safe Box.\nDownload it from playstore : %1$s</string>
    <string name="common_cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="common_ok">OK</string>
    <string name="biometric_title_text">Login to SafeBox</string>
    <string name="biometric_sub_title_text">Verify your identity</string>
    <string name="biometric_negative_button_text">Close</string>
    <string name="do_not_ask_again">Don\'t ask again</string>
    <string name="allow">Allow</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>


    <!--    User data type text-->
    <string name="type_display_account">Bank Account</string>
    <string name="type_display_card">Card</string>
    <string name="type_display_note">Note</string>
    <string name="type_display_login">Login</string>
    <string name="type_display_authenticator">Authenticator</string>

    <!--    Bank card dialog-->
    <string name="number">Number </string>
    <string name="expiryDate">Expiry Date</string>
    <string name="name">Name</string>
    <string name="pin">PIN</string>
    <string name="cvv" translatable="false">CVV</string>

    <!--    delete record dialog-->
    <string name="delete_this_record">Delete this record?</string>
    <string name="delete_record_dialog_body">I understand that this record will be permanently removed.</string>


    <!--     backup-->
    <string name="backup">Backup</string>
    <string name="backup_path_not_set_message">"Your backup location isn't set!! Use the button below to choose one.\nTip: It's a good idea to create a new folder for your backups (e.g., 'Safe Box Backup')."</string>
    <string name="backup_set_location">Set Location</string>
    <string name="backup_set_message">Backup location is set</string>
    <string name="backup_path">Backup path is %1$s</string>
    <string name="backup_path_select_failed_message">Could not access the selected folder. Try creating a new folder for your backups.</string>
    <string name="retry">Retry</string>
    <string name="backup_time">Backup was last taken on %1$s</string>
    <string name="backup_info_1">* Backup is taken every time you login with password and is encrypted by your current master password </string>
    <string name="backup_edit_path">Edit Path</string>
    <string name="new_backup_dialog_body_text">Please enter a password to create a new backup file.</string>
    <string name="backup_in_progress_message">It may take a while to back up data. Sit back and relax !</string>
    <string name="backup_complete_message">Your backup is complete! Remember the password.</string>
    <string name="backup_nothing_to_backup_message">Your vault is empty. There is nothing to back up.</string>
    <string name="backup_folder_inaccessible_message">Backup folder is no longer accessible. Please choose it again.</string>
    <string name="backup_write_failed_message">Backup failed. Could not write the backup file, check free space in the backup folder.</string>
    <string name="backup_unknown_error_message">Backup failed due to an unexpected error. Please report it from Settings &gt; Send feedback.</string>

    <!--     restore-->
    <string name="restore">Restore</string>
    <string name="restore_info">"Click below button to select a backup file.\nPlease note that to restore data, enter the same password that was used to create the backup file.\n\nRestoring replaces everything currently saved in the app with the contents of the backup file. Any record that is not in the backup file will be permanently lost."</string>
    <string name="new_restore_dialog_body_text">Please enter the password that was used to make the backup file.</string>
    <string name="restore_complete_message">Data has been successfully restored.</string>
    <string name="restore_in_progress_message">It may take a while to restore data. Sit back and relax !</string>

    <!--     master password dialog-->
    <string name="incorrect_pswrd_message">Password is incorrect !</string>
    <string name="restore_corrupt_file_message">The selected backup file is corrupted or invalid. Please choose a valid backup file.</string>
    <string name="restore_backup_too_new_message">This backup was created by a newer version of Safe Box. Your backup file is fine, please update the app to restore it.</string>
    <string name="restore_backup_empty_message">This backup contains no records. Nothing was restored.</string>
    <string name="failed_message">An unexpected error occurred while processing your data.</string>

    <!--    Notification-->
    <string name="notification_backup_channel_id" translatable="false">backup data safebox</string>
    <string name="notification_backup_channel_name">Safe Box Backup</string>
    <string name="notification_backup_channel_desc">This notification helps you to keep track of backup progress</string>
    <string name="notification_backup_title">Data Backup</string>
    <string name="notification_backup_in_progress">"Backing up your data to local storage. You will be notified once it is complete"</string>
    <string name="notification_backup_failure">Backup Failed! Please set backup path</string>
    <string name="notification_backup_success">Backup is complete. It is a good idea to keep a copy in cloud</string>
    <string name="notification_permission_rationale_dialog_body">To ensure you\'re always aware of your automatic backups, please allow notifications.\nYou will be alerted when a backup is complete or if an issue occurs.</string>
    <string name="notification_permission_rationale_dialog_heading">Need Notification permission</string>

    <!--    Record screen-->
    <string name="loading_data">Loading your data …</string>
    <string name="no_record">Start fresh by adding a record or bring back your data from a backup.</string>
    <string name="new_record_button">Add a new record</string>
    <string name="restore_records_button">Restore data</string>
    <string name="no_filtered_record_title">Oops! No results here.</string>
    <string name="no_filtered_record_body">We couldn\'t find anything matching your search. Try adjusting your filters or checking for typos.</string>

    <!--    Settings screen-->
    <string name="settings_section_security_and_privacy">Security &amp; Privacy</string>
    <string name="settings_section_support_and_community">Support &amp; Community</string>

    <string name="settings_privacy_enabled_title">Privacy mode</string>
    <string name="settings_privacy_enabled_body">Masks app content in the device overview screen to protect sensitive data and do not allow app screenshot. Recommended to keep it on.</string>

    <string name="settings_auto_backup_title">Auto-backup on login</string>
    <string name="settings_auto_backup_body">Automatically backs up your data when you sign in with your master password (not with biometric). Recommended to keep it on.</string>

    <string name="settings_ask_for_pswrd_after_biometric_title">Ask for password after %1$d biometric logins.</string>
    <string name="settings_ask_for_pswrd_after_biometric_body">This is the limit for how many times is continuous biometric login allowed. Once this limit is reached, password will be required to login. This ensures you remember your master password.</string>

    <string name="settings_away_timeout_title">Auto-lock after %1$d seconds.</string>
    <string name="settings_away_timeout_body">App logs you out automatically if you are away from the app for too long. A shorter duration is safer.</string>

    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_body">Report a bug or suggest a new feature. We value your input to make Safe Box better.</string>

    <string name="settings_review_title">Rate on Play Store</string>
    <string name="settings_review_body">If you enjoy using the app, please take a moment to leave a review. It helps others find us!</string>

    <string name="settings_github_title">Contribute on GitHub</string>
    <string name="settings_github_body">SafeBox is open source. View the code, report issues, or contribute to the project on GitHub.</string>

    <!--    Other-->
    <string name="app_name" translatable="false">Safe Box</string>
    <string name="blank_validation_text">Enter something !</string>
    <string name="length_validation_text">Too short !</string>
    <string name="special_char_validation_text">Enter a special character (e.g. @, *, $)</string>
    <string name="case_validation_text">Must include at least one uppercase(A) and one lowercase letter(a).</string>
    <string name="numeric_validation_text">Enter at least two numbers (e.g. 1, 2, 3)</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="enter_hint">Enter a hint</string>
    <string name="show_hint">Show Hint</string>
    <string name="hide_hint">Hide Hint</string>
    <string name="hint">Hint</string>
    <string name="title">Title </string>
    <string name="url" translatable="false">URL</string>
    <string name="user_id">User Id </string>
    <string name="notes">Notes</string>
    <string name="account_number">Account Number </string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="branch_code">Branch Code</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_address">Branch Address</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="micr_code">MICR Code</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="welcome">Welcome !</string>
    <string name="timeout_dialog_message">You were away for too long. Please click OK to login to app again</string>
    <string name="timeout_dialog_positive_button_text">OK</string>
    <string name="created_on">Created on</string>
    <string name="updated_on">Updated on</string>
    <string name="add_a_new_record">Add a new record</string>
    <string name="search_bar_placeholder">Search …</string>
    <string name="send_feedback_email">Send feedback Email</string>
    <string name="safe_box_feedback" translatable="false">Safe Box Feedback</string>
    <string name="no_email_app_found">No email app found</string>

    <!-- Password Reset & Update -->
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_device_security_subtitle">Authenticate to reset master password</string>
    <string name="update_password">Update Master Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="change_master_password_body">Update your master password and hint</string>
    <string name="password_updated_success">Master password updated successfully</string>
    <string name="device_security_required_title">Device Security Required</string>
    <string name="device_security_required_body">Please enable device security (PIN, pattern, password, or biometrics) in your Android Settings to verify your identity before changing your master password.</string>
    <string name="open_settings">Open Settings</string>

    <!-- QR Scanner & Camera Permission -->
    <string name="camera_permission_rationale_dialog_heading">Camera Permission Required</string>
    <string name="camera_permission_rationale_dialog_body">Safe Box requires camera access to scan QR codes for two-factor authentication setup.</string>
    <string name="qr_scanner_title">Scan QR Code</string>
    <string name="qr_scanner_instruction">Align QR code within the frame</string>
    <string name="enter_key_manually">Enter Key Manually</string>
    <string name="cd_turn_flash_on">Turn flash on</string>
    <string name="cd_turn_flash_off">Turn flash off</string>
    <string name="close">Close</string>
    <string name="unsupported_qr_code_dialog_heading">Can\'t use this QR code</string>
    <string name="unsupported_qr_code_reason_malformed">This QR code is damaged or badly formatted, so Safe Box could not read it.</string>
    <string name="unsupported_qr_code_reason_otp_type">Safe Box supports time-based (TOTP) codes only. This QR code is for a different kind of one-time password.</string>
    <string name="unsupported_qr_code_reason_invalid_secret">The secret key in this QR code is missing or is not valid Base32.</string>
    <string name="unsupported_qr_code_reason_algorithm">This QR code uses a hashing algorithm Safe Box cannot compute. Only SHA1, SHA256 and SHA512 are supported.</string>
    <string name="unsupported_qr_code_reason_digits">This QR code asks for a code length Safe Box cannot generate. Only 6 to 8 digits are supported.</string>
    <string name="unsupported_qr_code_reason_period">This QR code specifies an invalid refresh interval.</string>
    <string name="unsupported_qr_code_reason_ambiguous">This QR code gives conflicting settings for the same value, so Safe Box cannot tell which one it is meant to use.</string>
    <string name="copied_to_clipboard">Copied %1$s to clipboard</string>
    <string name="state_copied">Copied</string>
    <!-- Authenticator -->
    <string name="totp_code">One-time code</string>
    <string name="secret_key">Secret key</string>
    <string name="cd_copy_totp_code">Copy one-time code</string>
    <string name="totp_invalid_secret_key">Invalid secret key, cannot generate code</string>
    <!-- In-app updates -->
    <string name="in_app_update_downloaded">Update downloaded. Restart Safe Box to install it.</string>
    <string name="in_app_update_restart">Restart</string>
</resources>